index.html added

--- a/views/index.html
+++ b/views/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/views/src/css/style.css">
     <title>ECorp</title>
 </head>
 <body>
-    <h1>The control is a ilution</h1>
+    
+    <iframe src="https://phpstack-1304539-4747970.cloudwaysapps.com/" frameborder="1"></iframe>
+
 </body>
 </html>
